# LocalTrans

./: .agent-guide.md  .gitignore  README.md  README_CN.md  index.html  localtrans-gui.spec  localtrans-qml.spec  localtrans.spec  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  test_qml_frontend.py  test_qml_simple.py  vite.config.mjs
.github/workflows/: build-windows.yml  ci-smoke.yml  ci.yml  release.yml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.linux  Dockerfile.windows  README.md  docker-compose.yml
docs/: bidirectional_architecture_design.md  bidirectional_solution_comparison.md  industry_research_and_practices_2026.md  loci_qml_software_architecture.md
scripts/: audio_stress_test.ps1  benchmark_latency.py  build.bat  build.sh  fullchain_realtime_eval.py  gui_bidirectional_check.py  real_audio_e2e_test.py  stress_audio_io.py  vite-safe.cjs
src/: App.tsx  bootstrap.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  temp_errors.txt
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/mt-runtime/: mt_translate.py  runtime.env
src-tauri/src/: env_path.rs  error.rs  ipc.rs  lib.rs  logging.rs  main.rs  session_bus.rs
src-tauri/src/asr/: mod.rs  sensevoice.rs  sherpa.rs  streaming.rs  whisper.rs
src-tauri/src/audio/: buffer.rs  capture.rs  mod.rs  processor.rs  resampler.rs  vad.rs
src-tauri/src/cli/: parser.rs
src-tauri/src/commands/: audio.rs  config.rs  hello.rs  mod.rs  model.rs  process_file.rs  router.rs  session.rs  system.rs  translation.rs  tts.rs  version.rs
src-tauri/src/pipeline/: events.rs  mod.rs  realtime.rs  session.rs  stream.rs
src-tauri/src/translation/: loci_bridge.rs  mod.rs  nllb.rs
src-tauri/src/tts/: custom_voice.rs  edge_tts.rs  mod.rs  piper_tts.rs  playback.rs
src/components/GlassCard/: index.tsx
src/components/StatusIndicator/: index.tsx
src/components/TitleBar/: index.tsx
src/components/TranslationBubble/: index.tsx
src/localtrans/: __init__.py  main.py
src/localtrans/app/: __init__.py  bootstrap.py  lifecycle.py  service_container.py
src/localtrans/asr/: __init__.py  engine.py  funasr_direct.py  stream.py
src/localtrans/audio/: __init__.py  capturer.py  router.py  virtual_device.py
src/localtrans/audio/utils/: __init__.py  resampler.py  vad.py
src/localtrans/config/: __init__.py  models.py  settings.py
src/localtrans/gui/: __init__.py  app.py  main.py
src/localtrans/loci/: __init__.py  runtime.py  types.py
src/localtrans/mt/: __init__.py  engine.py  term_bank.py
src/localtrans/native/loci/: loci.h
src/localtrans/pipeline/: __init__.py  realtime.py  translator.py
src/localtrans/services/: __init__.py  audio_device_service.py  audio_io_service.py  model_service.py  platform_service.py  session_service.py
src/localtrans/services/loci/: __init__.py  adapter.py
src/localtrans/tts/: __init__.py  engine.py  stream.py
src/localtrans/ui/: __init__.py  cli_controller.py  main.py
src/localtrans/ui/bridge/: __init__.py  qt_bridge.py
src/localtrans/ui/qml/: Main.qml
src/localtrans/ui/qml/components/: CustomTitleBar.qml  DiagnosticsGroup.qml  GlassCard.qml  ModelListView.qml  TranslationBubble.qml
src/localtrans/ui/qml/pages/: DiagnosticsPage.qml  ModelPage.qml  SessionPage.qml  SettingsPage.qml
src/localtrans/ui/qml/theme/: Theme.qml
src/localtrans/ui/viewmodels/: __init__.py  audio_device_vm.py  model_vm.py  platform_vm.py  session_vm.py  settings_vm.py
src/localtrans/utils/: __init__.py  model_downloader.py  monitor.py
src/pages/DiagnosticsPage/: index.tsx
src/pages/ModelPage/: index.tsx
src/pages/SessionPage/: index.tsx
src/pages/SettingsPage/: index.tsx
src/stores/: sessionStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
tests/: conftest.py  test_asr.py  test_audio.py  test_audio_io_service.py  test_config.py  test_gui.py  test_gui_bidirectional_check.py  test_init.py  test_main.py  test_model_downloader.py  test_mt.py  test_pipeline.py  test_real_audio_integration.py  test_session_vm_routing.py  test_term_bank.py  test_tts.py
tmp_stress/: e2e_results.jsonl  session_monitor.jsonl
tmp_stress_run/: e2e_results.jsonl  session_monitor.jsonl
