[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localtrans"
version = "1.0.0"
description = "AI实时翻译软件 - 端侧本地部署"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "iFlow Team"}
]
keywords = ["translation", "asr", "tts", "real-time", "local"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # 音频处理
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pyttsx3>=2.90",
    "vosk>=0.3.45",
    "argostranslate>=1.9.6",
    "ctranslate2>=4.5.0",
    "sentencepiece>=0.1.99",
    
    # 配置和工具
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    
    # 音频路由 (Windows)
    "pycaw>=20230407",
    "comtypes>=1.2.0",
]

[project.optional-dependencies]
# ASR语音识别
asr = [
    "faster-whisper>=1.0.0",
    "openai-whisper>=20231117",
    "vosk>=0.3.45",
    "funasr>=1.2.0",
    "sherpa-onnx>=1.11.0",
    "librosa>=0.10.1",
    "scipy>=1.11.0",
]

# MT机器翻译
mt = [
    "ctranslate2>=4.5.0",
    "argostranslate>=1.9.6",
    "sentencepiece>=0.1.99",
    "transformers>=4.36.0",
    "torch>=2.1.0",
]

# TTS语音合成
tts = [
    "pyttsx3>=2.90",
    "coqui-tts>=0.22.0",
    "piper-tts>=1.2.0",
]

# VAD静音检测
vad = [
    "webrtcvad>=2.0.10",
]

# 重采样
resample = [
    "samplerate>=0.2.1",
    "resampy>=0.4.2",
    "scipy>=1.11.0",
]

# GUI界面
gui = [
    "PyQt6>=6.6.0",
    "PyQt6-Qt6>=6.6.0",
]

# 性能监控
monitor = [
    "psutil>=5.9.0",
]

# 模型下载
download = [
    "huggingface_hub>=0.20.0",
]

# 完整安装
full = [
    "localtrans[asr,mt,tts,vad,resample,gui,monitor,download]",
]

# 开发工具
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# CUDA支持 (需要从PyTorch官网安装)
# cuda = [
#     "torch>=2.1.0+cu121",
# ]

[project.scripts]
localtrans = "localtrans.main:main"
localtrans-gui = "localtrans.gui.main:run_gui"

[project.urls]
Homepage = "https://github.com/iflow/localtrans"
Repository = "https://github.com/iflow/localtrans"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
localtrans = ["py.typed", "resources/**/*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
