[package]
name = "localtrans"
version = "0.1.0"
description = "Real-time audio transcription and translation application"
authors = ["you"]
edition = "2021"
default-run = "localtrans"

[lib]
name = "localtrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
cpal = "0.15"
rubato = "0.15"
hound = "3.5"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TTS dependencies
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
minimp3 = "0.5"
base64 = "0.22"

# Whisper.cpp integration (optional, requires libclang for build)
whisper-rs = { version = "0.11", features = [], optional = true }

# Sherpa-rs for offline ASR/TTS (recommended, auto-downloads binaries)
sherpa-rs = { version = "0.6", features = ["download-binaries", "tts"], optional = true }

# Loci integration (local path)
loci = { path = "../../Loci", optional = true }

[features]
default = ["custom-protocol", "loci-backend", "sherpa-backend"]
custom-protocol = ["tauri/custom-protocol"]

# Backend features

loci-backend = ["loci"]

whisper-backend = ["whisper-rs"]    # Requires libclang

sherpa-backend = ["sherpa-rs"]  # Auto-downloads binaries, no manual setup needed

mock-asr = []  # Use mock ASR implementation for development

# Hardware acceleration (placeholder, requires proper setup)
cuda = []
metal = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
