[package]
name = "localtrans"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "localtrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
dunce = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.60", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.55"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
minimp3 = "0.5"
base64 = "0.22"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
parking_lot = "0.12"
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
futures = "0.3"
sherpa-rs = { version = "0.6", features = ["download-binaries", "tts"], optional = true }
whisper-rs = { version = "0.11", optional = true }
loci = { path = "../../Loci", optional = true }

[features]
default = ["custom-protocol", "sherpa-backend", "loci-backend"]
custom-protocol = ["tauri/custom-protocol"]
sherpa-backend = ["sherpa-rs"]
loci-backend = ["loci"]
mock-asr = []
whisper-backend = ["whisper-rs"]
